Fikser feil med ved opphenting av uttak der det er mer enn 1 part. Inmem repo og scenario for testbarhet